// Masjid App Database Schema
// Generated for dbdiagram.io

Table admin_users {
  id uuid [pk]
  username varchar(50) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  full_name varchar(100) [not null]
  role varchar(20) [default: 'admin', note: 'super_admin or admin']
  is_active boolean [default: true]
  failed_login_attempts integer [default: 0, note: 'Counter for rate limiting']
  locked_until timestamp [note: 'Account locked after 5 failed attempts']
  last_login_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Stores masjid administrator accounts for web portal access'
}

Table prayer_times {
  id uuid [pk]
  date date [not null, unique]
  hijri_date varchar(50)
  prayers jsonb [not null, note: 'JSON with athan and jamah times for all 6 prayers']
  jumuah_times jsonb [note: 'Array of Friday Jumuah prayer times']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Daily prayer times with JSONB for flexible prayer structure'
}

Table events {
  id uuid [pk]
  title varchar(255) [not null]
  description text [not null]
  category varchar(50) [not null, note: 'community, educational, fundraiser, religious, youth, other']
  status varchar(20) [default: 'draft', note: 'draft, published, cancelled, completed']
  event_date date [not null]
  timing jsonb [not null, note: 'start_time, end_time, doors_open']
  location jsonb [not null, note: 'venue, address, capacity, coordinates']
  speaker jsonb [note: 'name, bio, image - single or array']
  media jsonb [note: 'featured_image_url, featured_image_key, gallery']
  registration_link varchar(500)
  notification_sent boolean [default: false]
  notification_sent_at timestamp
  created_by uuid [ref: > admin_users.id]
  published_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Community events with JSONB for timing, location, speaker, and media'
}

Table announcements {
  id uuid [pk]
  title varchar(100) [not null]
  message text [not null]
  status varchar(20) [default: 'draft', note: 'draft, scheduled, sent, failed']
  is_scheduled boolean [default: false]
  scheduled_for timestamp [note: 'When to send, NULL for immediate']
  sent_at timestamp
  fcm_message_id varchar(255) [note: 'Firebase Cloud Messaging ID']
  created_by uuid [ref: > admin_users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Push notification announcements - immediate or scheduled'
}

Table campaigns {
  id uuid [pk]
  title varchar(255) [not null]
  description text [not null]
  category varchar(50) [not null, note: 'masjid_development, education, charity, individual_support, general']
  status varchar(20) [default: 'draft', note: 'draft, active, paused, completed, cancelled']
  goal_amount decimal(10,2) [not null]
  raised_amount decimal(10,2) [default: 0.00, note: 'Running total via triggers']
  donor_count integer [default: 0]
  start_date date [not null]
  end_date date
  media jsonb [note: 'featured_image_url, featured_image_key']
  created_by uuid [ref: > admin_users.id]
  published_at timestamp
  ended_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Fundraising campaigns with goals, progress tracking, and timeline'
}

Table donations {
  id uuid [pk]
  campaign_id uuid [not null, ref: > campaigns.id]
  donor_name varchar(100)
  donor_email varchar(255)
  is_anonymous boolean [default: false]
  amount decimal(10,2) [not null]
  processing_fee decimal(10,2) [default: 0.00]
  cover_fee boolean [default: false, note: 'True if donor covers fees']
  total_charged decimal(10,2) [not null, note: 'amount + fee if cover_fee']
  currency varchar(3) [default: 'GBP']
  stripe_payment_intent_id varchar(255) [unique, note: 'Prevents duplicate processing']
  stripe_checkout_session_id varchar(255)
  payment_method varchar(20) [note: 'card, apple_pay, google_pay, paypal']
  status varchar(20) [default: 'pending', note: 'pending, completed, failed, refunded']
  receipt_sent boolean [default: false]
  receipt_sent_at timestamp
  completed_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Individual donation records with Stripe payment tracking'
}

Table masjid_settings {
  id uuid [pk]
  name varchar(255) [not null]
  about text
  logo_url varchar(500)
  logo_key varchar(255)
  address_line1 varchar(255)
  address_line2 varchar(255)
  city varchar(100)
  postcode varchar(20)
  country varchar(100) [default: 'United Kingdom']
  phone varchar(20)
  email varchar(255)
  website varchar(500)
  latitude decimal(10,8)
  longitude decimal(11,8)
  mens_capacity integer
  womens_capacity integer
  services jsonb [note: 'iftar, funeral, marriage, counseling, etc.']
  facilities jsonb [note: 'parking, sisters_area, wudu_facilities, etc.']
  stripe_account_id varchar(255)
  stripe_account_status varchar(50) [note: 'pending, active, restricted']
  bank_account_name varchar(255)
  bank_account_number_last4 varchar(4)
  bank_sort_code varchar(10)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Single row table for masjid profile, services, facilities, and payment config'
}

Table audit_logs {
  id uuid [pk]
  user_id uuid [ref: > admin_users.id]
  action varchar(50) [not null, note: 'create, update, delete, login, logout']
  entity_type varchar(50) [not null]
  entity_id uuid [not null]
  old_values jsonb [note: 'Previous values before update']
  new_values jsonb [note: 'New values after change']
  ip_address varchar(45)
  user_agent text
  created_at timestamp [default: `now()`]

  Note: 'Audit trail for all admin actions'
}

// Table Groups for better organization
TableGroup core_tables {
  admin_users
  masjid_settings
  prayer_times
}

TableGroup content_tables {
  events
  announcements
}

TableGroup financial_tables {
  campaigns
  donations
}

TableGroup system_tables {
  audit_logs
}
